--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB_URI = 'mongodb+srv://smeet-makwana:admin1!@cluster0.6fzpj8g.mongodb.net/?retryWrites=true&w=majority'
 JWT_SECRET ='amica-secret-key'
+CLIENT_URL='http://localhost:3000'
