--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 MONGODB_URI = 'mongodb+srv://smeet-makwana:admin1!@cluster0.6fzpj8g.mongodb.net/?retryWrites=true&w=majority'
 JWT_SECRET ='amica-secret-key'
 CLIENT_URL='http://localhost:3000'
-BASE_URL='http://localhost:8082/'
+BASE_URL='http://api.smeetmakwana.com/'
