--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ MONGODB_URI = 'mongodb+srv://smeet-makwana:admin1!@cluster0.6fzpj8g.mongodb.net/
 JWT_SECRET ='amica-secret-key'
 CLIENT_URL='http://localhost:3000'
 BASE_URL='https://api.smeetmakwana.com/'
+
+# Mail service
+EMAIL_SECRET_KEY='this-is-secret-key-for-smeetmakwana'
+EMAIL_SENDER='smeetmak22@gmail.com'
+EMAIL_PASSWORD='lrmmhxfxuhkpwmhq'
